# rng-tools

./: Android.mk  Makefile.am  README  rngd.c  rngtest.c
